--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.6",
     "@next/font": "13.1.6",
+    "bootstrap": "^5.3.0",
+    "cryptocurrency-icons": "^0.18.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "firebase": "^9.23.0",
     "next": "^13.1.6",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-modal-video": "^2.0.0"
+    "react-modal-video": "^2.0.0",
+    "react-nft-gallery": "^0.7.0"
   },
   "devDependencies": {
     "@types/node": "^18.16.18",
