--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-modal-video": "^2.0.0",
-    "react-nft-gallery": "^0.7.0"
+    "react-nft-gallery": "^0.7.0",
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
     "@types/node": "^18.16.18",
